--- a/css/style.css
+++ b/css/style.css
@@ -484,3 +484,12 @@ header .navbar ul li a:hover{
     }
 
  }
+
+ @media (max-width:500px){
+    .about{
+        display: flex;
+        justify-content: center;
+        flex-flow: column;
+        padding:0 2rem;
+    }
+ }
